Added some documentation, set up build process to make multi-platform fat .jar